--- a/sass/admin.scss
+++ b/sass/admin.scss
@@ -5,4 +5,6 @@
             "mixins",
             "comun",
             "admin/admin-comun",
-            "admin/sidebar-menu";
+            "admin/sidebar-menu",
+            "admin/tabs",
+            "admin/forms";
