--- a/sass/admin/_admin-comun.scss
+++ b/sass/admin/_admin-comun.scss
@@ -91,7 +91,6 @@
         }
         .icon-default {
             padding:.5rem;
-
             cursor: pointer;
             &:hover {
                 fill: $primary-color;
@@ -147,7 +146,79 @@
             font-size: 2.5rem;
             font-weight: 100;
             margin-top: 0;
+            margin-bottom:2rem;
             border-bottom: 1px solid $primary-color;
+        }
+        .barra-opciones {
+            background-color: rgba($primary-color,.2);
+        }
+        .items-list {
+            padding: 1rem 0;
+            list-style-type: none;
+            border:1px solid rgba(0,0,0,.2);
+            border-radius:5px;
+            margin-top:0;
+            margin-bottom:0;
+            .trash, .edit {
+                transition: all .3s ease-in-out;
+            }
+            .options {
+                position: absolute;
+                right:0;
+                top:0;
+            }
+            .item {
+                position: relative;
+                margin-bottom:.5rem;
+                background-color: whitesmoke;
+                padding: .5rem;
+                border-radius:5px;
+                transition: all .3s ease-in-out;
+                &:hover {
+                    transform: scale(1.02);
+                    box-shadow: 0 0 2px rgb(255,255,255), 0 0 6px rgba(0,0,0,.3);
+                    z-index:10;
+                    background-color: rgba($primary-color,.2);
+                }
+                &:last-child {
+                    margin-bottom:0;
+                }
+            }
+            .item p{
+                margin: .5rem;
+                &:first-child {
+                    padding-top:1rem;
+                }
+            }
+            .name{
+                font-weight: bold;
+            }
+           
+
+        }
+        .content-item-list{
+            border-radius: 5px;
+        }
+        .tabs {
+            margin-top: 0;
+        }
+
+    }
+    .trash,
+    .edit,
+    .save,
+    .clear {
+        margin-left:.5rem;
+        transition: all .3s ease-in-out; 
+        &:hover {
+            transform:scale(1.3);
+        }
+    }
+    svg {
+        padding: .2rem;
+        fill: $terciary-color;
+        &:hover {
+            fill:$primary-color;
         }
     }
 }
