--- a/sass/admin/_tabs.scss
+++ b/sass/admin/_tabs.scss
@@ -17,8 +17,8 @@
             position:relative;
             border: 1px solid rgba(0,0,0,.3);
             border-bottom:none;
-            background-color: white;
-            color: $terciary-color;
+            background-color: $primary-color;
+            color: $white;
             box-shadow: 0 -2px 3px rgba(0,0,0,.2);
             z-index:3;
         }
