--- a/sass/admin/_admin-comun.scss
+++ b/sass/admin/_admin-comun.scss
@@ -5,211 +5,20 @@
     padding-left:260px;
     transition: padding-left .3s ease 0s;
     background-color: white;
-    .collapsed{
+    &.collapsed{
         padding-left:0px;
     }
-    .sidebar-menu{
-        position: fixed;
-        left: 0;
-        top: 0;
-        z-index: 100;
-        height: 100vh;
-        width: 260px;
-        overflow: hidden;
-        background: #303641;
-        box-shadow: 2px 0 25px rgba(0, 0, 0, 0.1);
-        transition: all 0.3s ease 0s;
-        .collapsed {
-            left:-260px;
-        }
-        .sidebar-header {
-            display: flex;
-            justify-content: space-between;
-            .logo {
-                width:70%;
-                height: 95px;
-            }
-        }
-        ul {
-            list-style-type: none;
-            margin: 0;
-            padding:0;
-            transition: all 0.3s ease 0s;
-            &.submenu {
-                height:0;
-                overflow: hidden;
-                &.active {
-                    height: auto;
-                }
-            }
-            li {
-                margin-bottom: 1px;
-                background-color:rgba(0,0,0,.3);
-                &:hover {
-                    background-color:rgba(0,0,0,.5);
-                }
-            }
-        }
     
-        a {
-            color: white;
-            text-decoration: none;
-            display: block;
-            padding: .6rem 1rem;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            font-weight: 200;
-            &.active {
-                font-weight: 600;
-                background-color:black;
-            }
-        }
-        .material-symbols-outlined {
-            font-variation-settings:
-            'FILL' 0,
-            'wght' 200,
-            'GRAD' 0,
-            'opsz' 48
-        }
-    
-    }
-    .header{
-        width: 100%;
-        height: 95px;
-        background-color: rgba(200,200,220,.1);
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        .izda, .dcha {
-            display: flex;
-            justify-content: start;
-            align-items: center;
-        }
-        .dcha {
-            justify-content: end;
-        }
-        .icon-default {
-            padding:.5rem;
-            cursor: pointer;
-            &:hover {
-                fill: $primary-color;
-            }
-            svg {
-                width:100%;
-                height:100%;
-            }
-        }
+    @import "sidebar-menu",
+            "header",
+            "main-content";
 
-        .hamburger {
-            width: 70px;
-            height: 70px;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            a {
-                width: 60%;
-                border-radius: 5px;
-                border: 1px solid black;
-                padding: .1rem .2rem;
-            }
 
-        }
-        .search-box {
-            input {
-                width: 350px;
-                border-radius: 33px;
-                border: none;
-                height: 40px;
-                padding-left: 20px;
-                padding-right: 40px;
-                letter-spacing: 0;
-                background: white;
-                color: #b1a7a7;
-                box-shadow: 0 0 6px rgba(0,0,0,.02),0 0 15px rgba(100,100,100,.1);
-            }
-            form {
-                margin-bottom: 0;
-                i {
-                    position: absolute;
-                    right: 21px;
-                    top: 14px;
-                    font-size: 14px;
-                    color: #b1a7a7;
-                }
-            }
-        }
-    }
-    .main-content {
-        padding:2rem;
-        h2 {
-            font-size: 2.5rem;
-            font-weight: 100;
-            margin-top: 0;
-            margin-bottom:2rem;
-            border-bottom: 1px solid $primary-color;
-        }
-        .barra-opciones {
-            background-color: rgba($primary-color,.2);
-        }
-        .items-list {
-            padding: 1rem 0;
-            list-style-type: none;
-            border:1px solid rgba(0,0,0,.2);
-            border-radius:5px;
-            margin-top:0;
-            margin-bottom:0;
-            .trash, .edit {
-                transition: all .3s ease-in-out;
-            }
-            .options {
-                position: absolute;
-                right:0;
-                top:0;
-            }
-            .item {
-                position: relative;
-                margin-bottom:.5rem;
-                background-color: whitesmoke;
-                padding: .5rem;
-                border-radius:5px;
-                transition: all .3s ease-in-out;
-                &:hover {
-                    transform: scale(1.02);
-                    box-shadow: 0 0 2px rgb(255,255,255), 0 0 6px rgba(0,0,0,.3);
-                    z-index:10;
-                    background-color: rgba($primary-color,.2);
-                }
-                &:last-child {
-                    margin-bottom:0;
-                }
-            }
-            .item p{
-                margin: .5rem;
-                &:first-child {
-                    padding-top:1rem;
-                }
-            }
-            .name{
-                font-weight: bold;
-            }
-           
-
-        }
-        .content-item-list{
-            border-radius: 5px;
-        }
-        .tabs {
-            margin-top: 0;
-        }
-
-    }
     .trash,
-    .edit,
-    .save,
-    .clear {
+    .edit {
         margin-left:.5rem;
-        transition: all .3s ease-in-out; 
+        transition: all .3s ease-in-out;
+        cursor:pointer;
         &:hover {
             transform:scale(1.3);
         }
