--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -4621,7 +4621,7 @@ select:focus-visible {
   transition: padding-left 0.3s ease 0s;
   background-color: white;
 }
-.admin-panel .collapsed {
+.admin-panel.collapsed {
   padding-left: 0px;
 }
 .admin-panel .sidebar-menu {
@@ -4636,7 +4636,7 @@ select:focus-visible {
   box-shadow: 2px 0 25px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease 0s;
 }
-.admin-panel .sidebar-menu .collapsed {
+.admin-panel .sidebar-menu.collapsed {
   left: -260px;
 }
 .admin-panel .sidebar-menu .sidebar-header {
@@ -4694,11 +4694,11 @@ select:focus-visible {
 }
 .admin-panel .header .izda, .admin-panel .header .dcha {
   display: flex;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
 }
 .admin-panel .header .dcha {
-  justify-content: end;
+  justify-content: flex-end;
 }
 .admin-panel .header .icon-default {
   padding: 0.5rem;
@@ -4767,15 +4767,10 @@ select:focus-visible {
   margin-top: 0;
   margin-bottom: 0;
 }
-.admin-panel .main-content .items-list .trash, .admin-panel .main-content .items-list .edit {
-  transition: all 0.3s ease-in-out;
-}
-.admin-panel .main-content .items-list .options {
-  position: absolute;
-  right: 0;
-  top: 0;
-}
 .admin-panel .main-content .items-list .item {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
   position: relative;
   margin-bottom: 0.5rem;
   background-color: whitesmoke;
@@ -4795,9 +4790,6 @@ select:focus-visible {
 .admin-panel .main-content .items-list .item p {
   margin: 0.5rem;
 }
-.admin-panel .main-content .items-list .item p:first-child {
-  padding-top: 1rem;
-}
 .admin-panel .main-content .items-list .name {
   font-weight: bold;
 }
@@ -4808,16 +4800,13 @@ select:focus-visible {
   margin-top: 0;
 }
 .admin-panel .trash,
-.admin-panel .edit,
-.admin-panel .save,
-.admin-panel .clear {
+.admin-panel .edit {
   margin-left: 0.5rem;
   transition: all 0.3s ease-in-out;
+  cursor: pointer;
 }
 .admin-panel .trash:hover,
-.admin-panel .edit:hover,
-.admin-panel .save:hover,
-.admin-panel .clear:hover {
+.admin-panel .edit:hover {
   transform: scale(1.3);
 }
 .admin-panel svg {
@@ -4828,13 +4817,276 @@ select:focus-visible {
   fill: #7dca2b;
 }
 
-.product-features-tabs .item {
+.burger {
+  cursor: pointer;
+  padding: 3em 1.5em;
+}
+.burger > div {
+  width: 4rem;
+  height: 0.5rem;
+  border-radius: 1rem;
+  background: black;
+}
+.burger > div::before, .burger > div::after {
+  transition: font-size 0s;
+  content: "";
+  display: block;
+  position: absolute;
+  width: 4em;
+  height: 0.5em;
+  background: black;
+  border-radius: 0.5rem;
+}
+.burger > div::before {
+  margin-top: -1.5em;
+}
+.burger > div::after {
+  margin-top: 1.5em;
+}
+
+.burger4 > div {
+  transition: all 0.4s, font-size 0s;
+}
+.burger4 > div::before, .burger4 > div::after {
+  transition: font-size 0s;
+  transform-origin: center center;
+}
+.burger4.toggled > div::before {
+  -webkit-animation: burg4top 0.4s linear forwards;
+          animation: burg4top 0.4s linear forwards;
+}
+.burger4.toggled > div {
+  -webkit-animation: burg4 0.4s linear forwards;
+          animation: burg4 0.4s linear forwards;
+}
+.burger4.toggled > div::after {
+  -webkit-animation: burg4bottom 0.4s linear forwards;
+          animation: burg4bottom 0.4s linear forwards;
+}
+.burger4.unToggled > div::before {
+  -webkit-animation: burg4topReset 0.4s linear forwards;
+          animation: burg4topReset 0.4s linear forwards;
+}
+.burger4.unToggled > div {
+  background: white;
+  -webkit-animation: burg4reset 0.4s linear forwards;
+          animation: burg4reset 0.4s linear forwards;
+}
+.burger4.unToggled > div::after {
+  -webkit-animation: burg4bottomReset 0.4s linear forwards;
+          animation: burg4bottomReset 0.4s linear forwards;
+}
+@-webkit-keyframes burg4 {
+  50% {
+    transform: rotate(0deg);
+    background: black;
+  }
+  100% {
+    transform: rotate(360deg);
+    background: none;
+  }
+}
+@keyframes burg4 {
+  50% {
+    transform: rotate(0deg);
+    background: black;
+  }
+  100% {
+    transform: rotate(360deg);
+    background: none;
+  }
+}
+@-webkit-keyframes burg4top {
+  50% {
+    margin-top: 0;
+    transform: rotate(0deg);
+  }
+  100% {
+    margin-top: 0;
+    transform: rotate(45deg);
+  }
+}
+@keyframes burg4top {
+  50% {
+    margin-top: 0;
+    transform: rotate(0deg);
+  }
+  100% {
+    margin-top: 0;
+    transform: rotate(45deg);
+  }
+}
+@-webkit-keyframes burg4bottom {
+  50% {
+    margin-top: 0;
+    transform: rotate(0deg);
+  }
+  100% {
+    margin-top: 0;
+    transform: rotate(-45deg);
+  }
+}
+@keyframes burg4bottom {
+  50% {
+    margin-top: 0;
+    transform: rotate(0deg);
+  }
+  100% {
+    margin-top: 0;
+    transform: rotate(-45deg);
+  }
+}
+@-webkit-keyframes burg4reset {
+  0% {
+    transform: rotate(0deg);
+    background: black;
+  }
+  50% {
+    transform: rotate(0deg);
+    background: black;
+  }
+  100% {
+    transform: rotate(-360deg);
+    background: black;
+  }
+}
+@keyframes burg4reset {
+  0% {
+    transform: rotate(0deg);
+    background: black;
+  }
+  50% {
+    transform: rotate(0deg);
+    background: black;
+  }
+  100% {
+    transform: rotate(-360deg);
+    background: black;
+  }
+}
+@-webkit-keyframes burg4topReset {
+  0% {
+    transform: rotate(45deg);
+    margin-top: 0;
+  }
+  50% {
+    transform: rotate(0deg);
+    margin-top: 0em;
+  }
+  100% {
+    transform: rotate(0deg);
+    margin-top: 1.5em;
+  }
+}
+@keyframes burg4topReset {
+  0% {
+    transform: rotate(45deg);
+    margin-top: 0;
+  }
+  50% {
+    transform: rotate(0deg);
+    margin-top: 0em;
+  }
+  100% {
+    transform: rotate(0deg);
+    margin-top: 1.5em;
+  }
+}
+@-webkit-keyframes burg4bottomReset {
+  0% {
+    transform: rotate(-45deg);
+    margin-top: 0;
+  }
+  50% {
+    margin-top: 0;
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(0deg);
+    margin-top: -1.5em;
+  }
+}
+@keyframes burg4bottomReset {
+  0% {
+    transform: rotate(-45deg);
+    margin-top: 0;
+  }
+  50% {
+    margin-top: 0;
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(0deg);
+    margin-top: -1.5em;
+  }
+}
+
+.sidebar-menu {
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 100;
+  height: 100vh;
+  width: 260px;
+  overflow: hidden;
+  background: #303641;
+  box-shadow: 2px 0 25px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+}
+.sidebar-menu.collapsed {
+  left: -260px;
+}
+.sidebar-menu .sidebar-header {
+  display: flex;
+  justify-content: space-between;
+}
+.sidebar-menu .sidebar-header .logo {
+  width: 70%;
+  height: 95px;
+}
+.sidebar-menu ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  transition: all 0.3s ease 0s;
+}
+.sidebar-menu ul.submenu {
+  height: 0;
+  overflow: hidden;
+}
+.sidebar-menu ul.submenu.active {
+  height: auto;
+}
+.sidebar-menu ul li {
+  margin-bottom: 1px;
+  background-color: rgba(0, 0, 0, 0.3);
+}
+.sidebar-menu ul li:hover {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.sidebar-menu a {
+  color: white;
+  text-decoration: none;
+  display: block;
+  padding: 0.6rem 1rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-weight: 200;
+}
+.sidebar-menu a.active {
+  font-weight: 600;
+  background-color: black;
+}
+.sidebar-menu .material-symbols-outlined {
+  font-variation-settings: "FILL" 0, "wght" 200, "GRAD" 0, "opsz" 48;
+}
+
+.product-features-tabs .tabs1, .product-features-tabs .tabs2 {
   padding: 1rem;
   text-decoration: none;
   text-align: center;
   background-color: #ddd;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
   color: white;
   transition: all 0.3s ease-in-out;
   cursor: pointer;
@@ -4843,19 +5095,14 @@ select:focus-visible {
       -ms-user-select: none;
           user-select: none;
 }
-.product-features-tabs .item.active {
-  padding-top: calc(1rem + 3px);
-  padding-bottom: calc(1rem + 3px);
-  top: -3px;
+.product-features-tabs .tabs1.active, .product-features-tabs .tabs2.active {
   position: relative;
-  border: 1px solid rgba(0, 0, 0, 0.3);
   border-bottom: none;
   background-color: #7dca2b;
   color: #ffffff;
-  box-shadow: 0 -2px 3px rgba(0, 0, 0, 0.2);
   z-index: 3;
 }
-.product-features-tabs .item:not(.active):hover {
+.product-features-tabs .tabs1:not(.active):hover, .product-features-tabs .tabs2:not(.active):hover {
   background-color: #ccc;
   transition: all 0.3s ease-in-out;
 }
@@ -4863,14 +5110,10 @@ select:focus-visible {
   padding: 1rem;
   border: 1px solid rgba(0, 0, 0, 0.3);
   position: relative;
-  top: -4px;
-  border-radius: 5px;
+  z-index: 2;
   box-shadow: 0 -2px 3px rgba(0, 0, 0, 0.2);
   display: none;
   background-color: white;
-}
-.product-features-tabs .item-content:first-child {
-  border-top-left-radius: 0px;
 }
 .product-features-tabs .features-wrapper {
   background-color: red;
@@ -4878,9 +5121,36 @@ select:focus-visible {
 .product-features-tabs .active {
   display: block;
 }
+.product-features-tabs .footer {
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  border-top: none;
+  display: flex;
+  flex-direction: row-reverse;
+}
+.product-features-tabs .footer button {
+  border: none;
+  padding: 1rem;
+  transition: all 0.3s ease-in-out;
+}
+.product-features-tabs .footer button.save {
+  background-color: #7dca2b;
+  color: white;
+}
+.product-features-tabs .footer button.save:hover {
+  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
+}
+.product-features-tabs .footer button.save:active {
+  box-shadow: inset 0 0 30px rgb(0, 0, 0);
+}
+.product-features-tabs .footer button.reset:hover {
+  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
+}
+.product-features-tabs .footer button.reset:active {
+  box-shadow: inset 0 0 30px rgb(0, 0, 0);
+}
 
 /* ---------------- ADMIN ---------------- */
-.admin-tabs input, .admin-tabs textarea {
+.forms input, .forms textarea {
   width: 100%;
   margin-bottom: 1rem;
   border: 1px solid #63a022;
@@ -4889,32 +5159,73 @@ select:focus-visible {
   border-radius: 5px;
   transition: all 0.6s ease-in-out;
 }
-.admin-tabs input:focus, .admin-tabs textarea:focus {
+.forms input:focus, .forms textarea:focus {
   outline: 0px;
   box-shadow: 0 0 10px #7dca2b;
   background-color: #ffffff;
 }
-.admin-tabs input.invalid, .admin-tabs textarea.invalid {
+.forms input.invalid, .forms textarea.invalid {
   border: 1px solid #cc0000;
   background-color: rgba(255, 255, 255, 0.2);
   box-shadow: 0 0 10px rgba(255, 0, 0, 0.5);
 }
-.admin-tabs input[type=radio] {
+.forms input[type=radio] {
   width: auto;
 }
-.admin-tabs textarea {
+.forms textarea {
   height: 15rem;
 }
-.admin-tabs svg {
+.forms svg {
   fill: #7dca2b;
   vertical-align: middle;
   margin-right: 1rem;
   width: 2.5rem;
 }
-.admin-tabs p {
+.forms p {
   font-size: 1.2rem;
 }
-.admin-tabs .error-message {
+.forms .on-off {
+  display: inline-block;
+  width: 50px;
+  height: 20px;
+  background-color: #fff;
+  border-radius: 30px;
+  cursor: pointer;
+  padding: 0;
+  margin-right: 1rem;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
+}
+.forms #toggle {
+  display: none;
+}
+.forms .slider {
+  display: block;
+  font-size: 10px;
+  position: relative;
+  color: white;
+}
+.forms .slider::after {
+  content: "OFF";
+  width: 25px;
+  height: 25px;
+  background-color: #900707;
+  border: 2px solid #fff;
+  border-radius: 50%;
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0.3), 0 0 10px rgba(0, 0, 0, 0.5);
+  position: absolute;
+  top: -5px;
+  left: 0;
+  display: grid;
+  place-content: center;
+  line-height: 0;
+  transition: background-color 0.25s, transform 0.25s ease-in;
+}
+.forms #toggle:checked + .slider::after {
+  content: "ON";
+  background-color: #05ae3e;
+  transform: translateX(25px);
+}
+.forms .error-message {
   font-size: 0.6rem;
   color: #ff0000;
   position: absolute;
@@ -4923,6 +5234,6 @@ select:focus-visible {
   text-align: right;
   right: 14px;
 }
-.admin-tabs .error {
+.forms .error {
   color: #ff0000;
 }/*# sourceMappingURL=admin.css.map */
