--- a/sass/admin/_forms.scss
+++ b/sass/admin/_forms.scss
@@ -1,5 +1,5 @@
 /* ---------------- ADMIN ---------------- */
-.admin-tabs {
+.forms {
     input, textarea {
         width: 100%;
         margin-bottom: 1rem;
@@ -34,6 +34,53 @@
     p {
         font-size: 1.2rem;
     }
+    
+    .on-off {
+        display: inline-block;
+        width: 50px;
+        height: 20px;
+        background-color: #fff;
+        border-radius: 30px;
+        cursor: pointer;
+        padding: 0;
+        margin-right:1rem;
+        box-shadow: 0 0 10px rgba(0,0,0,.25);
+    }
+       
+    #toggle {
+        display: none;
+    }
+       
+    .slider {
+        display: block;
+        font-size: 10px;
+        position: relative;
+        color:white;
+    }
+       
+    .slider::after {
+        content: 'OFF';
+        width: 25px;
+        height: 25px;
+        background-color: #900707;
+        border: 2px solid #fff;
+        border-radius: 50%;
+        box-shadow: 0 0 3px rgba(0, 0, 0, .3), 0 0 10px rgba(0,0,0,.5);
+        position: absolute;
+        top: -5px;
+        left: 0;
+        display: grid;
+        place-content: center;
+        line-height: 0;
+        transition: background-color .25s, transform .25s ease-in;
+    }
+       
+    #toggle:checked + .slider::after {
+        content: 'ON';
+        background-color: #05ae3e;
+        transform: translateX(25px);
+    }
+
     .error-message {
         font-size: .6rem;
         color: $danger-color;
