--- a/sass/admin/_header.scss
+++ b/sass/admin/_header.scss
@@ -1,43 +1,37 @@
 // =========== HEADER =============
-.header{
+.header {
     width: 100%;
     height: 95px;
-    background-color: rgba(200,200,220,.1);
+    background-color: rgba(200, 200, 220, .1);
     display: flex;
     justify-content: space-between;
     align-items: center;
-    .izda, .dcha {
+
+    .izda,
+    .dcha {
         display: flex;
         justify-content: flex-start;
         align-items: center;
     }
+
     .dcha {
         justify-content: flex-end;
     }
+
     .icon-default {
-        padding:.5rem;
+        padding: .5rem;
         cursor: pointer;
+
         &:hover {
             fill: $primary-color;
         }
+
         svg {
-            width:100%;
-            height:100%;
+            width: 100%;
+            height: 100%;
         }
     }
-    .hamburger {
-        width: 70px;
-        height: 70px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        a {
-            width: 60%;
-            border-radius: 5px;
-            border: 1px solid black;
-            padding: .1rem .2rem;
-        }
-    }
+
     .search-box {
         input {
             width: 350px;
@@ -49,10 +43,12 @@
             letter-spacing: 0;
             background: white;
             color: #b1a7a7;
-            box-shadow: 0 0 6px rgba(0,0,0,.02),0 0 15px rgba(100,100,100,.1);
+            box-shadow: 0 0 6px rgba(0, 0, 0, .02), 0 0 15px rgba(100, 100, 100, .1);
         }
+
         form {
             margin-bottom: 0;
+
             i {
                 position: absolute;
                 right: 21px;
