--- a/sass/admin.scss
+++ b/sass/admin.scss
@@ -4,6 +4,7 @@
             "variables",
             "mixins",
             "comun",
+            "notification",
             "admin/admin-comun",
             "admin/burger",
             "admin/sidebar-menu",
