--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -4462,58 +4462,6 @@ select:focus-visible {
   position: relative;
 }
 
-.notification-wrapper {
-  position: absolute;
-  justify-content: center;
-  align-items: center;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  display: none;
-}
-.notification-wrapper.active {
-  display: flex;
-}
-
-.notification {
-  width: 360px;
-  padding: 2rem;
-  text-align: center;
-  display: flex;
-  position: relative;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  font-weight: 200;
-  margin: auto;
-  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
-  transform: translateY(-600%);
-  transition: opacity 2s ease-in-out, transform 0.8s ease-in-out;
-  opacity: 0;
-}
-.notification p {
-  font-size: 1.5rem;
-  color: #ffffff;
-  margin: 0;
-}
-.notification img {
-  width: 20%;
-  display: block;
-  filter: invert(100%);
-  margin-bottom: 0.5rem;
-}
-.notification.active {
-  background-color: #7dca2b;
-  transform: translateY(0);
-  opacity: 1;
-}
-.notification.error {
-  background-color: #ff0000;
-  transform: translateY(0);
-  opacity: 1;
-}
-
 .square {
   position: relative;
   width: 100%;
@@ -4611,6 +4559,73 @@ select:focus-visible {
 
 .text-align-center {
   text-align: center;
+}
+
+.error-message {
+  font-size: 0.6rem;
+  color: #ff0000;
+  position: absolute;
+  bottom: 7px;
+  display: none;
+  text-align: right;
+  right: 14px;
+}
+
+.error {
+  color: #ff0000;
+}
+
+.notification-wrapper {
+  position: absolute;
+  justify-content: center;
+  align-items: center;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  display: none;
+}
+.notification-wrapper.active {
+  display: flex;
+}
+
+.notification {
+  width: 360px;
+  padding: 2rem;
+  text-align: center;
+  display: flex;
+  position: relative;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  font-weight: 200;
+  margin: auto;
+  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
+  transform: translateY(-600%);
+  transition: opacity 2s ease-in-out, transform 0.8s ease-in-out;
+  opacity: 0;
+  z-index: 1000;
+}
+.notification p {
+  font-size: 1.5rem;
+  color: #ffffff;
+  margin: 0;
+}
+.notification img {
+  width: 20%;
+  display: block;
+  filter: invert(100%);
+  margin-bottom: 0.5rem;
+}
+.notification.active {
+  background-color: #7dca2b;
+  transform: translateY(0);
+  opacity: 1;
+}
+.notification.error {
+  background-color: #ff0000;
+  transform: translateY(0);
+  opacity: 1;
 }
 
 .admin-panel {
