--- a/sass/app.scss
+++ b/sass/app.scss
@@ -13,6 +13,7 @@
             "front/producto",
             "front/banner",
             "front/contacto",
+            "notification",
             "front/cart",
             "front/summary",
             "front/tabs",
