--- a/sass/app.scss
+++ b/sass/app.scss
@@ -17,4 +17,5 @@
             "front/cart",
             "front/summary",
             "front/tabs",
-            "front/footer";
+            "front/footer",
+            "front/login";
