--- a/sass/_comun2.scss
+++ b/sass/_comun2.scss
@@ -1,4 +1,4 @@
-//  Estilos generales que se aplicaran a toda la web
+//  Estilos generales que se aplicaran a toda la web 
 //  como son la tipografia general y el color del texto que se aplicarán por defecto.
 
 html {
@@ -33,9 +33,9 @@ a {
 
 //  Estilos que tendrán en general todos las etiquetas select
 select {
-    border: 1px solid lighten($gray-999, 15%);
+    border: 1px solid lighten($gray-999,15%);
     border-radius: 5px;
-    padding: 0.5rem 1rem;
+    padding: .5rem 1rem;
 }
 
 select:focus-visible {
@@ -44,7 +44,7 @@ select:focus-visible {
 
 //  Aplica una doble sombra a todos los elementos que se le aplique esta clase
 .shadow {
-    box-shadow: 0 1px 5px rgba(0, 0, 0, 0.2), 0 7px 20px rgba(0, 0, 0, 0.2);
+    box-shadow: 0 1px 5px rgba(0, 0, 0, .2), 0 7px 20px rgba(0, 0, 0, .2);
 }
 
 //  Altura del 100% del alto del contenedor que contenga al elemento que se le aplique esta clase
@@ -58,42 +58,44 @@ select:focus-visible {
 }
 
 .textareas {
-    position: relative;
+    position:relative;
 }
 .counter-text {
     position: absolute;
-    right: 15px;
+    right:15px;
     top: 5px;
-    font-size: 0.7rem;
+    font-size: .7rem;
 }
 .pos-relative {
-    position: relative;
+    position:relative;
 }
 
-//  Hacer que un contenedor siempre sea cuadrado sea cual sea el viewport
+
+//  Hacer que un contenedor siempre sea cuadrado sea cual sea el viewport 
 //         <div class="card-item-img square">
 //             <div class="content">
 //                 <img src="img/pexels-pixabay-461198.jpg" alt="">
 //             </div>
-//         </div>
+//         </div> 
 
 //  La clase .square se usa en el contenedor que hace de mascara de la imagen
 .square {
     position: relative;
     width: 100%;
     &:after {
-        content: "";
-        display: block;
-        padding-bottom: 100%;
+      content: "";
+      display: block;
+      padding-bottom: 100%;
     }
     //  La clase .content se usa en un contenedor extra que envuelve la imagen
     .content {
-        position: absolute;
-        width: 100%;
-        height: 100%;
+      position: absolute;
+      width: 100%;
+      height: 100%;
     }
 }
-//  FIN Hacer que un contenedor siempre sea cuadrado sea cual sea el viewport
+//  FIN Hacer que un contenedor siempre sea cuadrado sea cual sea el viewport   
+
 
 //  Cuando hacemos una seccion donde hay varias columnas, si alguna es mas alta que las otras,
 //  normalmente vemos diferentes alturas en dichos elementos, al contenedor que generamos dentro
@@ -102,7 +104,7 @@ select:focus-visible {
 //  O sea, hay que crear dos contenedores, uno con la info que va alineada arriba y otro con lo que
 //  ira alineado abajo. Con esta clase hara este efecto.
 
-.mantener-alto {
+.mantener-alto{
     display: flex;
     flex-direction: column;
     height: 100%;
@@ -116,121 +118,27 @@ select:focus-visible {
     -webkit-line-clamp: 5;
     -webkit-box-orient: vertical;
     overflow: hidden;
-}
-
-// Esta clase sirve para extender la superficie de pulsacion del enlace o boton
-// hasta el tamaño del primer padre que se encuentre con la propiedad 'position:relative'
-// Para que la clase 'stretched-link' funcione se tiene que
-// poner 'position:relative' al padre que queramos que se limite esta accion
-.stretched-link::after {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    z-index: 1;
-    pointer-events: auto;
-    content: "";
-}
-
-// Esta clase sirve para los elementos switch que se usan por ejemplo en el modal de cookies para activarlas o desactivarlas
-// <div class="onoffswitch">
-//     <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch" tabindex="0" checked>
-//     <label class="onoffswitch-label" for="myonoffswitch">
-//         <span class="onoffswitch-inner"></span>
-//         <span class="onoffswitch-switch"></span>
-//     </label>
-// </div>
-
-.onoffswitch {
-    position: relative;
-    width: 55px;
-    user-select: none;
-}
-.onoffswitch-checkbox {
-    position: absolute;
-    opacity: 0;
-    pointer-events: none;
-}
-.onoffswitch-label {
-    display: block;
-    overflow: hidden;
-    cursor: pointer;
-    border: 2px solid #999999;
-    border-radius: 20px;
-}
-.onoffswitch-inner {
-    display: block;
-    width: 200%;
-    margin-left: -100%;
-    transition: margin 0.3s ease-in 0s;
-}
-.onoffswitch-inner:before,
-.onoffswitch-inner:after {
-    display: block;
-    float: left;
-    width: 50%;
-    height: 15px;
-    padding: 0;
-    line-height: 15px;
-    font-size: 11px;
-    color: white;
-    font-family: Trebuchet, Arial, sans-serif;
-    font-weight: bold;
-    box-sizing: border-box;
-}
-.onoffswitch-inner:before {
-    content: "ON";
-    padding-left: 7px;
-    background-color: #0f8c0f;
-    color: #ffffff;
-}
-.onoffswitch-inner:after {
-    content: "OFF";
-    padding-right: 7px;
-    background-color: #eeeeee;
-    color: #999999;
-    text-align: right;
-}
-.onoffswitch-switch {
-    display: block;
-    width: 20px;
-    margin: -2.5px;
-    background: #ffffff;
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    right: 36px;
-    border: 2px solid #999999;
-    border-radius: 20px;
-    transition: all 0.3s ease-in 0s;
-}
-.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-inner {
-    margin-left: 0;
-}
-.onoffswitch-checkbox:checked + .onoffswitch-label .onoffswitch-switch {
-    right: 0;
-}
-
+  }
+  
 //  Estilos por defecto para todos los botones de la web
 //  La propieda transition lo que hace es que cuando pasas o pulsas encima del boton
 //  el cambio de color, tamaño, etc. se haga de manera suave
-//  La propiedad cursor:pointer hace que se vea la manita cuando pasas por encima
+//  La propiedad cursor:pointer hace que se vea la manita cuando pasas por encima  
 
 .btn {
     font-size: 1rem;
     padding: 1rem 2rem;
     border: none;
     border-radius: 5px;
-    transition: all 0.3s ease-in-out;
+    transition: all .3s ease-in-out;
     cursor: pointer;
     background-color: $terciary-color;
 }
 
 //  Clase extra añadida a la de btn para que sea más pequeño
 .btn-sm {
-    font-size: 90%;
-    padding: 0.7rem 1.5rem;
+    font-size:90%;
+    padding:.7rem 1.5rem;
 }
 
 //  Clase extra añadida a la de btn para que sea más grande
@@ -244,25 +152,27 @@ select:focus-visible {
     background-color: $primary-color;
     color: $white;
     &:hover {
-        background-color: darken($primary-color, 10%);
+        background-color: darken($primary-color,10%);
     }
     &:focus {
-        background-color: darken($primary-color, 20%);
+        background-color: darken($primary-color,20%);
     }
 }
+
 
 //  Las próximas 3 clases extra añadida a la de btn para personalizar los botones secundarios de la web y sus efectos
 .btn-secondary {
     background-color: $gray-999;
     color: $white;
     &:hover {
-        background-color: darken($gray-999, 15%);
+        background-color:  darken($gray-999,15%);
         color: white;
     }
     &:focus {
-        background-color: darken($gray-999, 25%);
+        background-color: darken($gray-999,25%);
     }
 }
+
 
 //  Clase para aplicar el color principal de la web a los distintos elementos
 .color-principal {
