separacion de variables  color archivo unico scss

--- a/sass/app.scss
+++ b/sass/app.scss
@@ -1,21 +1,4 @@
-
-@import     "vendor/normalize",
-            "vendor/bootstrap-grid",
-            "variables",
-            "mixins",
-            "comun",
-            "front/add-substract",
-            "front/slider-gallery",
-            "front/header",
-            "front/slider",
-            "front/card",
-            "front/featured-productos",
-            "front/producto",
-            "front/banner",
-            "front/contacto",
-            "notification",
-            "front/cart",
-            "front/summary",
-            "front/tabs",
-            "front/footer",
-            "front/login";
+@import "vendor/normalize", "vendor/bootstrap-grid", "variables", "colors", "mixins", "comun", "front/add-substract",
+    "front/slider-gallery", "front/header", "front/slider", "front/card", "front/featured-productos", "front/producto",
+    "front/banner", "front/contacto", "notification", "front/cart", "front/summary", "front/tabs", "front/footer",
+    "front/login";
