--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -7,16 +7,7 @@ $z-index-header: 5000;
 $z-index-header-menu: 5000;
 $z-index-overlay: 5001;
 $z-index-spinner: 5002;
+// END Z-INDEX
 
 //typography
 $font-stack: Montserrat, Arial, Helvetica, sans-serif;
-
-//colors
-$primary-color: #7dca2b;
-$secondary-color: #383105;
-$terciary-color: #454545;
-$gray-999: #999999;
-$white: #ffffff;
-$black: #000000;
-$danger-color:#ff0000;
-
