--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -5150,6 +5150,57 @@ select:focus-visible {
   box-shadow: inset 0 0 30px rgb(0, 0, 0);
 }
 
+.product-features-tabs .item {
+  padding: 1rem;
+  text-decoration: none;
+  text-align: center;
+  background-color: #ddd;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  color: white;
+  transition: all 0.3s ease-in-out;
+  cursor: pointer;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+.product-features-tabs .item.active {
+  padding-top: calc(1rem + 3px);
+  padding-bottom: calc(1rem + 3px);
+  top: -3px;
+  position: relative;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  border-bottom: none;
+  background-color: white;
+  color: #454545;
+  box-shadow: 0 -2px 3px rgba(0, 0, 0, 0.2);
+  z-index: 3;
+}
+.product-features-tabs .item:not(.active):hover {
+  background-color: #ccc;
+  transition: all 0.3s ease-in-out;
+}
+.product-features-tabs .item-content {
+  padding: 1rem;
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  position: relative;
+  top: -4px;
+  border-radius: 5px;
+  box-shadow: 0 -2px 3px rgba(0, 0, 0, 0.2);
+  display: none;
+  background-color: white;
+}
+.product-features-tabs .item-content:first-child {
+  border-top-left-radius: 0px;
+}
+.product-features-tabs .features-wrapper {
+  background-color: red;
+}
+.product-features-tabs .active {
+  display: block;
+}
+
 /* ---------------- ADMIN ---------------- */
 .forms input, .forms textarea {
   width: 100%;
