--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -4984,6 +4984,18 @@ select:focus-visible {
   transform: translate(-10px, -5px) rotate(45deg);
 }
 
+.container-sidebar {
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 100;
+  height: 100vh;
+  width: 260px;
+  background: #303641;
+  box-shadow: 2px 0 25px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+}
+
 .sidebar-menu {
   position: fixed;
   left: 0;
@@ -5083,73 +5095,6 @@ select:focus-visible {
   color: #ffffff;
 }
 
-.product-features-tabs .tabs1, .product-features-tabs .tabs2 {
-  padding: 1rem;
-  text-decoration: none;
-  text-align: center;
-  background-color: #ddd;
-  color: white;
-  transition: all 0.3s ease-in-out;
-  cursor: pointer;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none;
-}
-.product-features-tabs .tabs1.active, .product-features-tabs .tabs2.active {
-  position: relative;
-  border-bottom: none;
-  background-color: #7dca2b;
-  color: #ffffff;
-  z-index: 3;
-}
-.product-features-tabs .tabs1:not(.active):hover, .product-features-tabs .tabs2:not(.active):hover {
-  background-color: #ccc;
-  transition: all 0.3s ease-in-out;
-}
-.product-features-tabs .item-content {
-  padding: 1rem;
-  border: 1px solid rgba(0, 0, 0, 0.3);
-  position: relative;
-  z-index: 2;
-  box-shadow: 0 -2px 3px rgba(0, 0, 0, 0.2);
-  display: none;
-  background-color: white;
-}
-.product-features-tabs .features-wrapper {
-  background-color: red;
-}
-.product-features-tabs .active {
-  display: block;
-}
-.product-features-tabs .footer {
-  border: 1px solid rgba(0, 0, 0, 0.3);
-  border-top: none;
-  display: flex;
-  flex-direction: row-reverse;
-}
-.product-features-tabs .footer button {
-  border: none;
-  padding: 1rem;
-  transition: all 0.3s ease-in-out;
-}
-.product-features-tabs .footer button.save {
-  background-color: #7dca2b;
-  color: white;
-}
-.product-features-tabs .footer button.save:hover {
-  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
-}
-.product-features-tabs .footer button.save:active {
-  box-shadow: inset 0 0 30px rgb(0, 0, 0);
-}
-.product-features-tabs .footer button.reset:hover {
-  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
-}
-.product-features-tabs .footer button.reset:active {
-  box-shadow: inset 0 0 30px rgb(0, 0, 0);
-}
-
 .product-features-tabs .item {
   padding: 1rem;
   text-decoration: none;
@@ -5186,7 +5131,6 @@ select:focus-visible {
   border: 1px solid rgba(0, 0, 0, 0.3);
   position: relative;
   top: -4px;
-  border-radius: 5px;
   box-shadow: 0 -2px 3px rgba(0, 0, 0, 0.2);
   display: none;
   background-color: white;
@@ -5199,6 +5143,35 @@ select:focus-visible {
 }
 .product-features-tabs .active {
   display: block;
+}
+.product-features-tabs .footer {
+  border: 1px solid rgba(0, 0, 0, 0.3);
+  border-top: none;
+  display: flex;
+  flex-direction: row-reverse;
+  position: relative;
+  top: -4px;
+}
+.product-features-tabs .footer button {
+  border: none;
+  padding: 1rem;
+  transition: all 0.3s ease-in-out;
+}
+.product-features-tabs .footer button.save {
+  background-color: #7dca2b;
+  color: white;
+}
+.product-features-tabs .footer button.save:hover {
+  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
+}
+.product-features-tabs .footer button.save:active {
+  box-shadow: inset 0 0 30px rgb(0, 0, 0);
+}
+.product-features-tabs .footer button.reset:hover {
+  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.5);
+}
+.product-features-tabs .footer button.reset:active {
+  box-shadow: inset 0 0 30px rgb(0, 0, 0);
 }
 
 /* ---------------- ADMIN ---------------- */
