--- a/sass/admin.scss
+++ b/sass/admin.scss
@@ -1,2 +1,13 @@
-@import "vendor/normalize", "vendor/bootstrap-grid", "variables", "colors", "mixins", "comun", "notification",
-    "admin/admin-comun", "admin/burger", "admin/sidebar-menu", "admin/admin-tabs","admin/tabs", "admin/forms";
+@import "vendor/normalize",
+        "vendor/bootstrap-grid",
+        "variables",
+        "colors",
+        "mixins",
+        "comun",
+        "notification",
+        "admin/admin-comun",
+        "admin/burger",
+        "admin/sidebar-menu", 
+        // "admin/admin-tabs",
+        "admin/tabs",
+        "admin/forms";
