--- a/sass/admin/_burger.scss
+++ b/sass/admin/_burger.scss
@@ -39,3 +39,15 @@
 	-o-transform: translate(-10px, -5px) rotate(45deg);
 	transform: translate(-10px, -5px) rotate(45deg);
   }
+
+  .container-sidebar {
+	position: fixed;
+	left: 0;
+	top: 0;
+	z-index: 100;
+	height: 100vh;
+	width: 260px;
+	background: #303641;
+	box-shadow: 2px 0 25px rgba(0, 0, 0, 0.1);
+	transition: all 0.3s ease 0s;
+}
