--- a/sass/admin/_tabs.scss
+++ b/sass/admin/_tabs.scss
@@ -32,7 +32,6 @@
         border: 1px solid rgba(0,0,0,.3);
         position: relative;
         top:-4px;
-        border-radius: 5px;
         box-shadow: 0 -2px 3px rgba(0,0,0,.2);
         display: none;
         background-color: white;
@@ -46,5 +45,36 @@
     }
     .active {
         display: block;
+    }
+    .footer {
+        border: 1px solid rgba(0,0,0,.3);
+        border-top: none;
+        display: flex;
+        flex-direction: row-reverse;
+        position: relative;
+        top:-4px;
+        button {
+            border:none;
+            padding:1rem;
+            transition: all .3s ease-in-out;
+            &.save {
+                background-color: $primary-color;
+                color:white;
+                &:hover {
+                    box-shadow: inset 0 0 10px rgba(0,0,0,.5);
+                }
+                &:active {
+                    box-shadow: inset 0 0 30px rgba(0,0,0,1);
+                }
+            }
+            &.reset {
+                &:hover {
+                    box-shadow: inset 0 0 10px rgba(0,0,0,.5);
+                }
+                &:active {
+                    box-shadow: inset 0 0 30px rgba(0,0,0,1);
+                }
+            }
+        }
     }
 }
