--- a/assets/css/admin.css
+++ b/assets/css/admin.css
@@ -4721,17 +4721,6 @@ select:focus-visible {
   opacity: 1;
 }
 
-.admin-panel {
-  width: 100%;
-  height: 100%;
-  min-height: 100vh;
-  padding-left: 260px;
-  transition: padding-left 0.3s ease 0s;
-  background-color: white;
-}
-.admin-panel.collapsed {
-  padding-left: 0px;
-}
 .admin-panel .sidebar-menu {
   position: fixed;
   left: 0;
@@ -4994,6 +4983,22 @@ select:focus-visible {
   background: #303641;
   box-shadow: 2px 0 25px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease 0s;
+  overflow: hidden;
+}
+.container-sidebar.collapsed {
+  width: 0;
+}
+
+.container-main {
+  width: calc(100% - 260px);
+  height: 100%;
+  min-height: 100vh;
+  background-color: white;
+  transition: all 0.3s ease 0s;
+  margin-left: auto;
+}
+.container-main.collapsed {
+  width: 100%;
 }
 
 .sidebar-menu {
