--- a/sass/admin/_admin-comun.scss
+++ b/sass/admin/_admin-comun.scss
@@ -1,13 +1,10 @@
 .admin-panel{
-    width: 100%;
-    height: 100%;
-    min-height: 100vh;
-    padding-left:260px;
-    transition: padding-left .3s ease 0s;
-    background-color: white;
-    &.collapsed{
-        padding-left:0px;
-    }
+    // width: 100%;
+    // height: 100%;
+    // min-height: 100vh;
+    // transition: padding-left .3s ease 0s;
+    // background-color: white;
+
     
     @import "sidebar-menu",
             "header",
